<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Fairphone Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Modifications (MN 2013-12-16):
- Added License
- Added airplane_mode_enabled, silent_mode_enabled and btn_off_widget
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">


    <string name="app_name">Peace of Mind+</string>
    <string name="app_version">1.2</string>
    <string name="peace_of_mind_widget">@string/app_name</string>
    <string name="peace_of_mind_dashclock">@string/app_name</string>
    <string name="activity_help">Help</string>
    <string name="activity_settings">Settings</string>

    <string name="at">At</string>
    <string name="peace">Peace</string>

    <string name="help_string_1">We become more conscious of our phones as our lives become increasingly connected\n\nWould you like to disconnect, if only for a moment?</string>
    <string name="help_string_2">Your phone will go silent and disconnect from the world: no e-mail, no status updates, no SMS and no phone calls</string>
    <string name="help_string_3">Choose how long you wish to disconnect (up to 12 hours)\n\nMeanwhile, you can still play games or use off-line apps</string>

    <string name="enjoy">Enjoy</string>
    <string name="some">Some</string>
    <string name="to_widget" />
    <string name="de" />
    <string name="um" />
    <string name="una" />
    <string name="to_m">To</string>
    <string name="to_h">To</string>
    <string name="hour_separator">h</string>

    <string name="peace_on_notification">At peace</string>
    <string name="peace_off_notification">Peace of Mind is off</string>

    <string name="btn_off_widget">Close</string>
    <string name="airplane_mode_enabled">Airplane mode is ON</string>
    <string name="silent_mode_enabled">Sound is OFF</string>

    <!--ActionBar-->
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!--Settings-->
    <string name="prefs_breadcrumb">Settings</string>
    <string name="prefs_duration_title">Maximum duration</string>
    <string name="prefs_duration_dialog_title">Set maximum duration</string>
    <string name="prefs_about_title">@string/action_about</string>
    <string name="prefs_duration_fast">3 hours</string>
    <string name="prefs_duration_moderate">6 hours</string>
    <string name="prefs_duration_slow">12 hours</string>
    <string name="prefs_enable_airplane_mode_title">Airplane Mode</string>
    <string name="prefs_enable_airplane_mode_summary_on">No phone calls and no SMS</string>
    <string name="prefs_enable_airplane_mode_summary_off">Phone calls and SMS allowed in silent mode</string>

    <!--DashClock-->
    <string name="dashclock_content_desc">Displays the time remaining till the end of the AtPeace mode.</string>
    <string name="dashclock_at_peace">At Peace</string>

    <!--About-->
    <string name="about_title">@string/app_name</string>
    <string name="btn_about_close">Close</string>
    <string name="about_credits_1">Android app developed by <a href="http://www.mudar.ca/">Mudar Noufal</a>. Source code is released under the Apache License version 2.0.</string>
    <string name="about_credits_2">Originally developed by <a href="http://www.kwamecorp.com/">Kwame Corporation</a> for the <a href="http://www.fairphone.com/">Fairphone</a>, Peace of Mind+ aims to make the app available to other Android devices.</string>
    <string name="about_website"><a href="http://fairphone.mudar.ca/">fairphone.mudar.ca</a></string>
    <string name="about_version">Version %s</string>

    <!--Accessibility-->
    <string name="btn_close">Close</string>

</resources>