<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Fairphone Project
Copyright (C) 2013 Mudar Noufal, PeaceOfMind+

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="3"
        android:dialogTitle="@string/prefs_duration_dialog_title"
        android:entries="@array/prefs_duration_entries"
        android:entryValues="@array/prefs_duration_values"
        android:key="PM_PREFS_MAX_DURATION"
        android:title="@string/prefs_duration_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="PM_PREFS_HAS_AIRPLANE_MODE"
        android:summaryOff="@string/prefs_enable_airplane_mode_summary_off"
        android:summaryOn="@string/prefs_enable_airplane_mode_summary_on"
        android:title="@string/prefs_enable_airplane_mode_title" />

    <ca.mudar.fairphone.peaceofmind.ui.AboutDialog
        android:dialogIcon="@drawable/ic_launcher"
        android:dialogLayout="@layout/dialog_about"
        android:dialogTitle="@string/about_title"
        android:negativeButtonText="@string/btn_about_close"
        android:positiveButtonText="@null"
        android:title="@string/prefs_about_title" />
</PreferenceScreen>
