<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Fairphone Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Modifications (MN 2013-12-16):
- Added License
- Width = match_parent
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/peaceOfMindWidgetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/widget_off" />

    <RelativeLayout
        android:id="@+id/onGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/peaceOfMindText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/progressBarBackground"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/progressBarBackground"
            android:orientation="horizontal"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/atText"
                style="@style/WidgetOnLightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at" />

            <TextView
                android:id="@+id/peaceText"
                style="@style/WidgetOnBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peace" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/timerTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/progressBarBackground"
            android:layout_toLeftOf="@+id/progressBarBackground"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/timeText"
                style="@style/WidgetOnBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="3dp"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/toText"
                style="@style/WidgetOnLightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeText"
                android:layout_marginTop="-6dp"
                android:layout_toLeftOf="@+id/totalTimeText"
                android:paddingRight="0.9dp"
                android:text="@string/to_m"
                android:textColor="@color/grey_text_to" />

            <TextView
                android:id="@+id/totalTimeText"
                style="@style/WidgetOnBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/timeText"
                android:layout_marginTop="-6dp"
                android:paddingRight="3dp"
                android:textAllCaps="false"
                android:textColor="@color/grey_text_to" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/secondaryProgressBar"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:indeterminateOnly="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/secondary_progressbar_progress" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:indeterminateOnly="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar_progress" />

        <FrameLayout
            android:id="@+id/progressBarBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/widget_progressbar_background_on" />
    </RelativeLayout>

</RelativeLayout>