<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Fairphone Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Modifications (MN 2013-12-16):
- Added License
- Added RelativeLayout wrapper around VideoView for fullscreen resize
- Reduced number of layouts and optimized background drawables
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <VideoView
            android:id="@+id/pomVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <View
        android:id="@+id/background_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/seekbar_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/transition_seekbar_background">

        <LinearLayout
            android:id="@+id/timeTextCurrentGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/inPeaceTextCurrent"
            android:layout_toLeftOf="@+id/verticalSeekBar"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeTextCurrent"
                style="@style/TimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="0.8"
                android:paddingRight="5dp" />

            <LinearLayout
                android:id="@+id/toTimeGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toText"
                    style="@style/ToText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:text="@string/to_m" />

                <TextView
                    android:id="@+id/toTimeText"
                    style="@style/ToTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:paddingRight="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inPeaceTextCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/verticalSeekBar"
            android:layout_marginBottom="28dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/verticalSeekBar"
            android:alpha="0.5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/currentAtText"
                style="@style/AtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at" />

            <TextView
                android:id="@+id/currentPeaceText"
                style="@style/PeaceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/bug_fix_padding"
                android:text="@string/peace" />
        </LinearLayout>

        <TextView
            android:id="@+id/timeTextTotal"
            style="@style/TotalTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/verticalSeekBar"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/verticalSeekBar"
            android:alpha="0.5"
            android:paddingTop="16dp"
            android:visibility="invisible" />

        <View
            android:id="@+id/progressView"
            android:layout_width="58.5dp"
            android:layout_height="0dp"
            android:background="@drawable/seekbar_progress_secondary" />


        <ca.mudar.fairphone.peaceofmind.ui.VerticalSeekBar
            android:id="@+id/verticalSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:max="100"
            android:padding="0dp"
            android:progressDrawable="@drawable/transparent"
            android:rotation="180"
            android:thumb="@drawable/seekbar_thumb_off"
            android:thumbOffset="0dp" />
    </RelativeLayout>

</FrameLayout>


